refactor: User 및 Entity 관련 유효성 검증 개선 및 코드 정리
- 유효성 검증 로직 간소화 및 불필요한 코드를 제거.
- `User` 엔티티 메서드와 구조 개선.
- `Set` 반환 타입 변경 및 가독성 향상.
- `purgeAt`, `updatedAt`의 유효성 검증 추가.
- 중복된 예외 처리 로직 제거.